[package]
name = "simple-todo-cli"
version = "1.0.1"
edition = "2024"
description="A simple todo CLI app in Rust."
license="MIT"

[[bin]]
name = "todo"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.101"
clap = {version="4.5.59", features = ["derive"]}
inquire = "0.9.3"
serde = {version="1.0.228", features = ["derive"]}
serde_json = "1.0.149"
