[package]
name = "simple-todo-cli"
version = "1.0.4"
edition = "2024"
description="A simple todo CLI app in Rust."
authors = ["Alexandre Trotel"]
documentation = "https://github.com/alexandretrotel/todo"
repository = "https://github.com/alexandretrotel/todo"
homepage = "https://github.com/alexandretrotel/todo"
license="GPL-3.0-or-later"

[[bin]]
name = "todo"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.101"
clap = {version="4.5.59", features = ["derive"]}
inquire = "0.9.3"
serde = {version="1.0.228", features = ["derive"]}
serde_json = "1.0.149"
